website/versioned_docs/version-2.6.x/reference/targets/python_requirement_library.mdx
---
title: python_requirement_library
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Python requirements installable by pip.

This target is useful when you want to declare Python requirements inline in a BUILD file. If you have a `requirements.txt` file already, you can instead use the macro `python_requirements()` to convert each requirement into a `python_requirement_library()` target automatically.

See https://www.pantsbuild.org/v2.6/docs/python-third-party-dependencies.

Backend: <span className="color--primary">``</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`field.type_hint`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `./pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

## `description`

<Field
    type_repr={`field.type_hint`}
>

A human-readable description of the target.

Use `./pants list --documented ::` to see all targets with descriptions.

</Field>

## `dependencies`

<Field
    type_repr={`field.type_hint`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;].

Alternatively, you may include file names. Pants will find which target owns that file, and create a new target from that which only includes the file in its `sources` field. For files relative to the current BUILD file, prefix with `./`; otherwise, put the full path, e.g. [&#x27;./sibling.txt&#x27;, &#x27;resources/demo.json&#x27;].

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

## `requirements`

<Field
    type_repr={`field.type_hint`}
>

A sequence of pip-style requirement strings, e.g. `['foo==1.8', "bar<=3 ; python_version<'3'"]`.

</Field>

## `module_mapping`

<Field
    type_repr={`field.type_hint`}
>

A mapping of requirement names to a list of the modules they provide.

For example, `{"ansicolors": ["colors"]}`.

Any unspecified requirements will use the requirement name as the default module, e.g. &quot;Django&quot; will default to `["django"]`.

This is used to infer dependencies.

</Field>

## `type_stubs_module_mapping`

<Field
    type_repr={`field.type_hint`}
>

A mapping of type-stub requirement names to a list of the modules they provide.

For example, `{"types-requests": ["requests"]}`.

If the requirement is not specified _and_ it starts with `types-` or ends with `-types`, the requirement will be treated as a type stub for the corresponding module, e.g. &quot;types-request&quot; has the module &quot;requests&quot;. Otherwise, the requirement is treated like a normal dependency (see the field module_mapping).

This is used to infer dependencies for type stubs.

</Field>



</span>